# api/types/requests.go
@@ -1,0 +1,6 @@
+package types
+
+type LoginAdminRequest struct {
+	UserName string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
