# api/types/stores.go
@@ -1,0 +1,7 @@
+package types
+
+type AdminStore interface {
+	GetAdmins() ([]Admin, error)
+	GetAdminByID(id int) (*Admin, error)
+	GetAdminByUsername(username string) (*Admin, error)
+}
